# yafl

./: .gitignore  Applicative_8h_source.html  BUILD  CMakeLists.txt  Doxyfile  Either_8h_source.html  Functor_8h_source.html  HOF_8h_source.html  LICENSE  Maybe_8h_source.html  Monad_8h_source.html  README.md  TypeTraits_8h_source.html  WORKSPACE  annotated.html  annotated_dup.js  classes.html  classyafl_1_1Either_3_01ErrorType_00_01void_01_4__coll__graph.map  classyafl_1_1Either_3_01ErrorType_00_01void_01_4__inherit__graph.md5  classyafl_1_1Either_3_01void_00_01ValueType_01_4__coll__graph.map  classyafl_1_1Either_3_01void_00_01ValueType_01_4__coll__graph.md5  classyafl_1_1Either_3_01void_00_01void_01_4__coll__graph.map  classyafl_1_1Either_3_01void_00_01void_01_4__inherit__graph.md5  classyafl_1_1Either__coll__graph.map  classyafl_1_1Either__inherit__graph.md5  classyafl_1_1Maybe_3_01void_01_4__inherit__graph.map  classyafl_1_1Maybe_3_01void_01_4__inherit__graph.md5  classyafl_1_1Maybe__coll__graph.map  classyafl_1_1Maybe__coll__graph.md5  classyafl_1_1core_1_1Applicative__inherit__graph.map  classyafl_1_1core_1_1Applicative__inherit__graph.md5  classyafl_1_1core_1_1Functor__inherit__graph.map  classyafl_1_1core_1_1Functor__inherit__graph.md5  classyafl_1_1core_1_1Monad__inherit__graph.map  classyafl_1_1core_1_1Monad__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b4a03f816f29d6846c9586d826e98d30.html  dir_b4a03f816f29d6846c9586d826e98d30.js  files.html  functions.html  (+212 more)
.github/workflows/: yafl-build-docs.yml  yafl-build-run-coverage.yml  yafl-build-run-tests.yml
cmake/: CommonBuildUtils.cmake  CommonCMakeUtils.cmake  CoverageTarget.cmake  CoverageUtils.cmake  DocumentationUtils.cmake  TestUtils.cmake  Yafl.cmake.in  fastcov.py
cmake/CoverageTarget/: CheckThresholds.cmake
doc/: DocumentationUtils.cmake  Doxyfile.in
example_app/: CMakeLists.txt  main.cpp
html/: Applicative_8h_source.html  Either_8h_source.html  Functor_8h_source.html  HOF_8h_source.html  Maybe_8h_source.html  Monad_8h_source.html  TypeTraits_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b4a03f816f29d6846c9586d826e98d30.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  group__Core_classyafl_1_1core_1_1Applicative.js  group__Core_classyafl_1_1core_1_1Functor.js  group__Either.html  group__Either.js  group__Either_classyafl_1_1Either.js  group__Either_classyafl_1_1Either_3_01ErrorType_00_01void_01_4.js  group__Either_classyafl_1_1Either_3_01void_00_01ValueType_01_4.js  group__Function.html  group__Function.js  group__Maybe_classyafl_1_1Maybe_3_01void_01_4.js  group__Tuple.html  group__Tuple.js  group__Type.html  group__Type.js  group__Type_structyafl_1_1type_1_1details_1_1DomainDetailsImpl_3_01Either_3_01InnerError_00_01InnerValue_01_4_01_4.js  group__Type_structyafl_1_1type_1_1details_1_1DomainDetailsImpl_3_01Maybe_3_01Inner_01_4_01_4.js  hierarchy.html  hierarchy.js  menudata.js  modules.html  modules.js  namespacemembers.html  namespacemembers_type.html  (+25 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+23 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+36 more)
src/: Applicative.h  CMakeLists.txt  Compose.h  Either.h  Functor.h  Maybe.h  Monad.h  TypeTraits.h
src/yafl/: Applicative.h  Compose.h  Either.h  Functor.h  HOF.h  Maybe.h  Monad.h  TypeTraits.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  LawsTest.cpp
tests/compose/: CMakeLists.txt  ComposeTest.cpp
tests/either/: CMakeLists.txt  EitherTest.cpp
tests/hof/: CMakeLists.txt  HOFTest.cpp
tests/main/: CMakeLists.txt  main.cpp
tests/maybe/: CMakeLists.txt  MaybeTest.cpp
